--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,7 +2,6 @@
     position: relative;
     min-height: 740px;
     max-width: 1184px;
-    width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 92px;
@@ -14,29 +13,26 @@
     opacity: 0.3;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .cover {
         max-width: 1024px;
-        width: 100vw;
-        max-height: 640px;
+        min-height: 740px;
+
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .cover {
         max-width: 768px;
-        width: 100vw;
-        max-height: 480px;
+        min-height: 480px;
         margin-bottom: 88px;
         margin-bottom: 88px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .cover {
         max-width: 320px;
-        width: 100vw;
-        max-height: 200px;
         margin-bottom: 64px;
         margin-bottom: 88px;
     }
