--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,6 +1,8 @@
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .footer__links {
         display: flex;
         flex-wrap: wrap;
+        row-gap: 32px;
+        
     }
 }
