--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,6 @@
 .footer {
     max-width: 1184px;
-    min-width: 186px;
-    width: 100%;
-    min-height: 18px;
-    
+    min-height: 18px; 
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 24px;
@@ -13,26 +10,22 @@
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .footer {
-        min-width: 928px;
-        width: 90vw;
+        max-width: 928px;
         margin-bottom: 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .footer {
-        min-width: 720px;
-        width: 94vw;
+        max-width: 720px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .footer {
-        min-width: 186px;
-        width: 90vw;
-        min-height: 310px;
+        max-width: 186px;
         flex-wrap: wrap;
         margin: 0;
         margin-left: 16px;
