--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,36 +2,34 @@
     margin-top: 28px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 56px;
     max-width: 1184px;
-    min-height: 52px;
-    width: 100%;
     display: flex;
     justify-content: space-between;
     
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1239px) {
     .header {
-        min-width: 928px;
-        width: 90vw;
+        max-width: 928px;
         margin-bottom: 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .header {
-        min-width: 720px;
-        width: 94vw;
+        max-width: 720px;
+        margin-left: 24px;
+        margin-right: 24px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .header {
-        min-width: 288px;
-        width: 90vw;
+        max-width: 288px;
         margin-top: 16px;
-        margin-bottom: 48px;
-        
+        margin-left: 16px;
+        margin-right: 16px;
     }
 }
 
