--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,9 +6,8 @@
 
 
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .intro__list {
-        min-width: 288px;
-        width: 90vw;
+        max-width: 288px;
     }
 }
