--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,31 +4,26 @@
     margin-bottom: 8px;
     max-width: 984px;
     width: 100%;
-    height: 615px;
+    
 }
 
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .lead__image {
-        min-width: 928px;
-        width: 90vw;
-        max-height: 580px;
+        max-width: 928px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead__image {
-        min-width: 768px;
-        width: 100vw;
-        max-height: 480px;
+        max-width: 768px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .lead__image {
-        min-width: 320px;
-        width: 100vw;
-        max-height: 200px;
+        max-width: 320px;
+
     }
 }
