--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,9 +1,9 @@
 .lead__subtitle {
+    margin-top: 0;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 64px;
     width: 640px;
-    height: 72px;
     text-align: center;
     line-height: 36px;
     font-size: 30px;
@@ -11,24 +11,16 @@
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .lead__subtitle {
-        min-width: 63vw;
         margin-bottom: 56px;
     }
 }
 
-@media screen and (max-width: 768px) {
-    .lead__subtitle {
-        min-width: 83vw;
-    }
-}
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .lead__subtitle {
-        min-width: 288px;
-        width: 90vw;
-        min-height: 40px;
+        max-width: 288px;
         margin-bottom: 40px;
         font-size: 16px;
         line-height: 20px;
