--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,11 +1,10 @@
 .lead__title {
-    
+    padding: 0;
     margin-top: 0;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 32px;
     max-width: 720px;
-    min-height: 200px;
     text-align: center;
     font-style: normal;
     line-height: 100px;
@@ -14,27 +13,9 @@
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 767px) {
     .lead__title {
-        min-width: 720px;
-        width: 70vw;
-        min-height: 200px;
-        font-size: 96px;
-        line-height: 100px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .lead__title {
-        width: 94vw;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .lead__title {
-        min-width: 288px;
-        width: 90vw;
-        min-height: 88px;
+        max-width: 288px;
         margin-bottom: 16px;
         font-size: 40px;
         line-height: 44px;
