--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,32 +3,23 @@
     margin-left: auto; 
     margin-right: auto;     
     max-width: 984px;
-    min-width: 320px;
-    width: 100%;
-    min-height: 1005px; 
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .lead {
-        min-width: 928px;
-        width: 90vw;
-        min-height: 962px;
+        max-width: 928px;
         margin-top: 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead {
-        min-width: 768px;
-        width: 100vw;
-        min-height: 862px;
+        max-width: 768px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .lead {
-        min-width: 320px;
-        width: 100vw;
-        min-height: 406px;
+        max-width: 320px;
     }
 }
