--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,31 +5,31 @@
     padding-bottom: 0;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat (3, 1fr);
     gap: 16px;  
-
     max-width: 1184px;
-    width: 100%;
-    min-width: 288px;
-    min-height: 671px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .photo-grid {
         max-width: 928px;
-        grid-template-columns: repeat(3, minmax(min-content, max-content));
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat (4, 1fr);
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .photo-grid {
         max-width: 720px;
-        grid-template-columns: repeat(2, minmax(min-content, max-content));
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat (6, 1fr);
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .photo-grid {
         max-width: 288px;
-        grid-template-columns: repeat(1, minmax(min-content, max-content));
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat (12, 1fr);
     }
 }
