--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,29 +1,33 @@
 .place {
+    max-width: 984px;
     margin-bottom: 80px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(2, fit-content(320px));
     grid-template-areas:
         "title website"
         "image paragraph";
     gap: 48px 40px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .place {
+        max-width: 928px;
         gap: 48px 32px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .place {
+        max-width: 720px;
         margin-bottom: 73px;
         gap: 48px 28px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .place {
         display: inline;
+        max-width: 320px;
         margin-bottom: 50px;
     }
 }
