--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,5 +3,22 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 984px;
-    min-width: 320px;
+}
+
+@media screen and (max-width: 1279px) {
+    .places {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .places {
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .places {
+        max-width: 320px;
+    }
 }
