--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,8 +1,6 @@
 .root {
     margin: 0;
-    max-width: 1280px;
-    width: 100%;
-    min-width: 320px;
+    padding: 0;
     background-color: #2A2C2F;
     color: #FFFFFF;
     font-family: 'Inter', 'Arial', sans-serif;
