--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,7 +1,43 @@
 .cover__link {
-    text-decoration: none;
+  text-decoration: none;
+  max-width: 1184px;
+  min-height: 740px;
+  background-image: url(../../../images/__overlay.png);
+  background-size: cover;
+  z-index: 1;
 }
 
+.cover__link:before {
+  position: absolute;
+  content: "";
+  background: #2a2c2f;
+  opacity: 0.1;
+  min-width: 100%;
+  min-height: 100%;
+}
 
+.cover__link:hover::before {
+  transition: 0.5s;
+  opacity: 0.3;
+}
 
+@media screen and (max-width: 1279px) {
+  .cover__link {
+    max-width: 1024px;
+    min-height: 640px;
+  }
+}
 
+@media screen and (max-width: 1023px) {
+  .cover__link {
+    max-width: 768px;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__link {
+    max-width: 320px;
+    min-height: 200px;
+  }
+}
