--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,41 +1,37 @@
 .cover__title {
-    
-    max-width: 560px;
-    min-height: 152px;
-   margin-top: 0;
-   padding-top: 245px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 32px;
-font-style: normal;
-font-weight: 900;
-font-size: 72px;
-line-height: 76px;
-/* or 106% */
-text-align: center;
-color: #FFFFFF;
-z-index: 1;
+  max-width: 560px;
+  margin-top: 245px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 32px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  /* or 106% */
+  text-align: center;
+  color: #ffffff;
+  z-index: 2;
 }
 
 @media screen and (max-width: 1279px) {
-    .cover__title {
-        padding-top: 195px;
-    }
+  .cover__title {
+    margin-top: 195px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
-    .cover__title {
-        padding-top: 115px;
-    }
+  .cover__title {
+    margin-top: 115px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .cover__title {
-        max-width: 288px;
-        min-height: 200px;
-        padding-top: 33px;
-        margin-bottom: 16px;
-        font-size: 32px;
-        line-height: 35px;
-    }
+  .cover__title {
+    max-width: 288px;
+    margin-top: 33px;
+    margin-bottom: 16px;
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
