--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,42 +1,41 @@
 .cover {
-    position: relative;
-    min-height: 740px;
-    max-width: 1184px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 92px;
-    background-image: url(../../images/__background-cover.jpg);
+  position: relative;
+  min-height: 740px;
+  max-width: 1184px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 92px;
+  background-image: url(../../images/__background-cover.jpg);
+  object-fit: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  
 }
 
-.cover:hover {
-    transition: 0.5s;
-    opacity: 0.3;
-}
 
 @media screen and (max-width: 1279px) {
-    .cover {
-        max-width: 1024px;
-        min-height: 740px;
-
-    }
+  .cover {
+    max-width: 1024px;
+    min-height: 640px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
-    .cover {
-        max-width: 768px;
-        min-height: 480px;
-        margin-bottom: 88px;
-        margin-bottom: 88px;
-    }
+  .cover {
+    max-width: 768px;
+    min-height: 480px;
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom: 88px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .cover {
-        max-width: 320px;
-        margin-bottom: 64px;
-        margin-bottom: 88px;
-    }
+  .cover {
+    max-width: 320px;
+    min-height: 200px;
+    margin-bottom: 64px;
+  }
 }
-
-
-
