--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,19 +1,17 @@
 .footer__copyright {
-    font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 16px;
-/* identical to box height, or 114% */
-
-text-align: right;
-
-color: #FFFFFF;
-margin: 0;
-
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  /* identical to box height, or 114% */
+  text-align: right;
+  color: #ffffff;
+  margin: 0;
 }
 
 @media screen and (max-width: 767px) {
-    .footer__copyright {
-        line-height: 14px;
-    }
+  .footer__copyright {
+    line-height: 14px;
+    text-align: left;
+  }
 }
