--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,29 +1,29 @@
 .footer__link {
-    margin-right: 18px;
-    text-decoration: none;
-    color: #FFFFFF;
-    font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 18px;
-/* identical to box height, or 112% */
+  margin-right: 18px;
+  text-decoration: none;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  /* identical to box height, or 112% */
 }
 
 .footer__link:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .footer__link:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 767px) {
-    .footer__link {
-        font-size: 24px;
-        line-height: 24px;
-    }
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
 
-    .footer__link:last-child {
-        margin-bottom: 48px;
-    }
+  .footer__link:last-child {
+    margin-bottom: 48px;
+  }
 }
