--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,13 +1,12 @@
 .intro__list {
-    list-style-type: none;
-    padding-left: 0;
-    margin-bottom: 0;
+  margin-top: 0;
+  list-style-type: none;
+  padding-left: 0;
+  margin-bottom: 0;
 }
 
-
-
 @media screen and (max-width: 767px) {
-    .intro__list {
-        max-width: 288px;
-    }
+  .intro__list {
+    max-width: 288px;
+  }
 }
