--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,24 +1,27 @@
 .intro {
-    margin-top: 92px;
-    margin-left: 48px;
-    margin-bottom: 92px;
-    max-width: 690px;
-    min-width: 288px;
+  margin-top: 92px;
+  margin-left: 148px;
+  margin-bottom: 92px;
+  max-width: 690px;
+  min-width: 288px;
 }
 
+@media screen and (max-width: 1279px) {
+  .intro {
+    margin-left: 48px;
+  }
+}
 
 @media screen and (max-width: 1023px) {
-    .intro {
-        margin: 88px auto;
-        max-width: 720px;
-    }
+  .intro {
+    margin: 88px auto;
+    max-width: 720px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .intro {
-        margin: 64px auto;
-        max-width: 288px;
-    }
+  .intro {
+    margin: 64px auto;
+    max-width: 288px;
+  }
 }
-
-
