--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,22 +1,21 @@
 .lead__caption {
-    margin-bottom: 0;
-    min-width: 158px;
-    min-height: 14px;
-    line-height: 14px;
-    font-size: 10px;
-    font-weight: 400;
-    letter-spacing: 1.5px;
-    text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 14px;
+  font-size: 10px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 1023px) {
-    .lead__caption {
-        padding-left: 24px;
-    }
+  .lead__caption {
+    padding-left: 24px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .lead__caption {
-        padding-left: 16px;
-    }
+  .lead__caption {
+    padding-left: 16px;
+  }
 }
