--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,24 +1,26 @@
 .place__link {
-    grid-area: website; 
-    font-weight: 400;
-font-size: 18px;
-line-height: 22px;
-/* identical to box height, or 122% */
+  grid-area: website;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  /* identical to box height, or 122% */
+  text-decoration-line: underline;
+  color: #ffffff;
+  filter: brightness(50%);
+}
 
-text-decoration-line: underline;
-color: #FFFFFF;
-
+.place__link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 1023px) {
-    .place__link {
-        max-width: 352px;
-    }
+  .place__link {
+    max-width: 352px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .place__link {
-        max-width: 288px;
-        
-    }
+  .place__link {
+    max-width: 288px;
+  }
 }
