--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,30 +1,29 @@
 .place__paragraph {
-    grid-area: paragraph; 
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 163%;
-/* or 29px */
+  grid-area: paragraph;
+  min-width: 484px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 163%;
+  /* or 29px */
 }
 
-
 @media screen and (max-width: 1279px) {
-    .place__paragraph {
-        max-width: 456px;
-    }
+  .place__paragraph {
+    min-width: 456px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
-    .place__paragraph {
-        max-width: 352px;
-        font-size: 16px;
-    }
+  .place__paragraph {
+    min-width: 352px;
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .place__paragraph {
-        max-width: 288px;
-    }
+  .place__paragraph {
+    min-width: 288px;
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
-
-
-
