--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,24 +1,27 @@
 .places {
-    margin-bottom: 92px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 984px;
+  margin-bottom: 92px;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 984px;
 }
 
 @media screen and (max-width: 1279px) {
-    .places {
-        max-width: 928px;
-    }
+  .places {
+    max-width: 928px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
-    .places {
-        max-width: 720px;
-    }
+  .places {
+    max-width: 720px;
+    margin-bottom: 90px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .places {
-        max-width: 320px;
-    }
+  .places {
+    max-width: 320px;
+    margin-bottom: 66px;
+  }
 }
