--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,10 @@
+.footer__links {
+  display: flex;
+}
+
 @media screen and (max-width: 767px) {
   .footer__links {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     row-gap: 32px;
   }
 }
