--- a/blocks/header/__each-lang-link/_chosen/header__each-lang-link_chosen.css
+++ b/blocks/header/__each-lang-link/_chosen/header__each-lang-link_chosen.css
@@ -1,3 +1,3 @@
-.header__each-lang-link_chosen:hover {
-    border-bottom: solid;
+.header__each-lang-link_chosen {
+  text-decoration: underline;
 }
