--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,17 +1,16 @@
 .header__lang-link {
   display: flex;
-  align-items: flex-start;
   gap: 18px;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  /* identical to box height, or 117% */
-  text-align: right;
+  padding: 0;
+  margin-top: 18px;
+  margin-bottom: 6px;
 }
 
 @media screen and (max-width: 767px) {
   .header__lang-link {
-    font-size: 18px;
-    line-height: 20px;
+    margin-top: 16px;
+    margin-bottom: 6px;
   }
+
 }
+  
