--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -23,7 +23,7 @@
 @media screen and (max-width: 767px) {
   .place__paragraph {
     min-width: 288px;
-    margin-right: 0;
-    margin-left: 0;
+    margin-right: 16px;
+    margin-left: 16px;
   }
 }
