--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,7 +1,7 @@
 .root {
-    margin: 0;
-    padding: 0;
-    background-color: #2A2C2F;
-    color: #FFFFFF;
-    font-family: 'Inter', 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #2a2c2f;
+  color: #ffffff;
+  font-family: "Inter", "Arial", sans-serif;
 }
