--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,8 +1,6 @@
 .cover__title {
   max-width: 560px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 32px;
+  margin: 0 auto 32px auto;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
