--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -22,7 +22,8 @@
 @media screen and (max-width: 767px) {
   .footer {
     flex-direction: column;
-    margin-left: 16px;
-    margin-right: 118px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
   }
 }
