--- a/blocks/header/__each-lang-link/header__each-lang-link.css
+++ b/blocks/header/__each-lang-link/header__each-lang-link.css
@@ -1,16 +1,20 @@
 .header__each-lang-link {
-    color: #FFFFFF;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    /* identical to box height, or 117% */
-    text-align: right;
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  /* identical to box height, or 117% */
+  text-align: right;
+}
+
+.header__each-lang-link:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
   }
-  
-  @media screen and (max-width: 767px) {
-    .header__lang-link {
-      font-size: 18px;
-      line-height: 20px;
-    }
-  }
-  
+}
